add_executable(FreeSpeech cppext/cppext.cpp main.cpp database.cpp sqlite3.c crypto.cpp)
set (EXTRA_LIBS ${EXTRA_LIBS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I. -std=c++11 -g")
include_directories(${EXTRA_HEADERS} "${PROJECT_BINARY_DIR}" ".")
target_link_libraries(FreeSpeech pthread dl rt crypto ssl ${EXTRA_LIBS})
