cmake_minimum_required(VERSION 2.0)
add_executable(FreeSpeech cppext/cppext.cpp main.cpp database.cpp sqlite3.c crypto.cpp GlobalGrid.cpp ip.cpp)
find_package(PkgConfig REQUIRED)
pkg_check_modules(UPNP REQUIRED gupnp-1.0)
pkg_check_modules(GTK REQUIRED gtk+-2.0)
pkg_check_modules(SSDP REQUIRED gssdp-1.0)
pkg_check_modules(GATEWAY REQUIRED gupnp-igd-1.0)
set (EXTRA_LIBS ${EXTRA_LIBS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${UPNP_CFLAGS_OTHER} -I. -std=c++11 -g")
include_directories(${EXTRA_HEADERS} "${PROJECT_BINARY_DIR}" "." "${UPNP_INCLUDE_DIRS}" "${GTK_INCLUDE_DIRS}" "${GATEWAY_INCLUDE_DIRS}")
target_link_libraries(FreeSpeech pthread dl rt crypto ssl ${EXTRA_LIBS} ${GTK_LIBRARIES} ${UPNP_LIBRARIES} ${SSDP_LIBRARIES} ${GATEWAY_LIBRARIES})
